cmake_minimum_required(VERSION 3.21)
project(picture C)

set(CMAKE_C_STANDARD 11)
link_libraries(SDL2  SDL2_image SDL2_ttf m)
add_executable(picture main.c)
add_executable(draw draw.c)
add_executable(render-image render-image.c)
add_executable(fixed-frame-rate fixed-frame-rate.c)
add_executable(load-picture load-picture.c)
add_executable(draw-text draw-text.c)
add_executable(load-bmp load-bmp.c)
add_executable(render-rect render-rect.c)
add_executable(draw-line draw-line.c)
add_executable(render-image-1 render-image-1.c)
add_executable(spin spin.c)
add_executable(scale scale.c)
